--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
     "gulp-load-plugins": "^0.10.0",
-    "gulp-run": "^1.6.7"
+    "gulp-run": "^1.6.7",
+    "path": "0.11.14"
   }
 }
