--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     }
   ],
   "license": "ISC",
+  "dependencies": {
+    "path": "0.11.14"
+  },
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
     "gulp-load-plugins": "^0.10.0",
-    "gulp-run": "^1.6.7",
-    "path": "0.11.14"
+    "gulp-run": "^1.6.7"
   }
 }
