Added brec-base as dep / added brec-base paths to index.js

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     }
   ],
   "license": "ISC",
+  "dependencies" : {
+    "brec-base": "^0.1.0"
+  },
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
