--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "path": "0.11.14",
     "brec-base": "^0.1.0"
   },
-  "devDependencies": {
+  "peerDependencies": {
     "gulp": "^3.8.11",
     "gulp-load-plugins": "^0.10.0",
     "gulp-concat": "^2.5.2",
